WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42761
Chromium Dev Tools: Separators are missing in the context menu.
https://bugs.webkit.org/show_bug.cgi?id=42761
Summary
Chromium Dev Tools: Separators are missing in the context menu.
Pavel Feldman
Reported
2010-07-21 09:38:00 PDT
Patch to follow.
Attachments
[PATCH] Proposed fix.
(2.54 KB, patch)
2010-07-21 10:16 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
[PATCH] Oops. Attached too soon. Updated version.
(2.70 KB, patch)
2010-07-21 10:23 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
[PATCH] Cleaner solution.
(4.60 KB, patch)
2010-07-21 10:40 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
[PATCH] Review comments addressed.
(4.59 KB, patch)
2010-07-22 00:58 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
[PATCH] Mac bot fixed.
(5.12 KB, patch)
2010-07-22 01:00 PDT
,
Pavel Feldman
yurys
: review+
yurys
: commit-queue+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2010-07-21 10:16:51 PDT
Created
attachment 62203
[details]
[PATCH] Proposed fix.
WebKit Review Bot
Comment 2
2010-07-21 10:19:25 PDT
Attachment 62203
[details]
did not build on gtk: Build output:
http://queues.webkit.org/results/3556318
Eric Seidel (no email)
Comment 3
2010-07-21 10:22:14 PDT
Attachment 62203
[details]
did not build on mac: Build output:
http://queues.webkit.org/results/3383729
Early Warning System Bot
Comment 4
2010-07-21 10:22:57 PDT
Attachment 62203
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/3576327
Pavel Feldman
Comment 5
2010-07-21 10:23:34 PDT
Created
attachment 62206
[details]
[PATCH] Oops. Attached too soon. Updated version.
Pavel Feldman
Comment 6
2010-07-21 10:40:36 PDT
Created
attachment 62208
[details]
[PATCH] Cleaner solution.
Eric Seidel (no email)
Comment 7
2010-07-21 10:47:28 PDT
Attachment 62208
[details]
did not build on mac: Build output:
http://queues.webkit.org/results/3612028
Yury Semikhatsky
Comment 8
2010-07-21 22:31:48 PDT
Comment on
attachment 62208
[details]
[PATCH] Cleaner solution. WebCore/bindings/js/JSInspectorFrontendHostCustom.cpp:96 + static_cast<ContextMenuAction>(ContextMenuItemLastCustomTag - 1), This looks weird, why can't we use ContextMenuItemTagNoAction as before and include it into the if condition below in ContextMenuClientImpl.cpp ?
Pavel Feldman
Comment 9
2010-07-22 00:58:02 PDT
Created
attachment 62269
[details]
[PATCH] Review comments addressed.
Pavel Feldman
Comment 10
2010-07-22 01:00:23 PDT
Created
attachment 62270
[details]
[PATCH] Mac bot fixed.
Eric Seidel (no email)
Comment 11
2010-07-22 01:08:03 PDT
Attachment 62269
[details]
did not build on mac: Build output:
http://queues.webkit.org/results/3618001
Pavel Feldman
Comment 12
2010-07-22 05:52:44 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/bindings/js/JSInspectorFrontendHostCustom.cpp M WebCore/bindings/v8/custom/V8InspectorFrontendHostCustom.cpp M WebCore/platform/ContextMenu.cpp M WebCore/platform/ContextMenuItem.h M WebKit/chromium/ChangeLog M WebKit/chromium/src/ContextMenuClientImpl.cpp Committed
r63884
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug