2010-07-21  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Chromium Dev Tools: Separators are missing in the context menu.

        https://bugs.webkit.org/show_bug.cgi?id=42761

        * bindings/js/JSInspectorFrontendHostCustom.cpp:
        (WebCore::JSInspectorFrontendHost::showContextMenu):
        * bindings/v8/custom/V8InspectorFrontendHostCustom.cpp:
        (WebCore::V8InspectorFrontendHost::showContextMenuCallback):
        * platform/ContextMenuItem.h:
        (WebCore::):
2010-07-21  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Chromium Dev Tools: Separators are missing in the context menu.

        https://bugs.webkit.org/show_bug.cgi?id=42761

        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::populateCustomMenuItems):


Canonical link: https://commits.webkit.org/54721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63884 268f45cc-cd09-0410-ab3c-d52691b4dbfc