WebCore/platform/ContextMenuItem.h
@@ -144,6 +144,8 @@ namespace WebCore {
         ContextMenuItemTagChangeBack,
 #endif
         ContextMenuItemBaseCustomTag = 5000,
+        ContextMenuItemCustomTagNoAction = 5998,
+        ContextMenuItemLastCustomTag = 5999,
         ContextMenuItemBaseApplicationTag = 10000
     };
 
